# python-wikitext-parser-guide

./: .gitignore  404.html  code_along_dump.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
Fetching XML data/: index.html
Fetching XML data/Dump files/: index.html
Fetching XML data/Special Exports/: index.html
Parsing Wikitext/: index.html
Parsing Wikitext/Parsing Wikitext/: index.html
Parsing Wikitext/Wiki Basics/: index.html
Parsing XML/: index.html
Parsing XML/Parsing XML from Dump file/: index.html
Parsing XML/Parsing XML from Special Export/: index.html
data/: arbeiten.txt  schön.txt  schön.xml  stark.txt
docs/: README.md  code_along_dump.py  index.md  pycon_at.md  pycon_template.md
docs/Fetching XML data/: Dump files.md  Special Exports.md  index.md
docs/Parsing Wikitext/: Parsing Wikitext.md  Wiki Basics.md  index.md
docs/Parsing XML/: Parsing XML from Dump file.md  Parsing XML from Special Export.md  index.md
docs/data/: arbeiten.txt  playground_dump_20241020.xml
pycon_at/: generate_notebooks.py  generate_toy_data.py  index.html  update.py
pycon_template/: index.html
search/: search_index.json
